--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/index.css" rel="stylesheet">
         <script src="libs/jquery.min.js"></script>
+        <script src="libs/jquery.min.js"></script>
     </head>
     <body>
         <h1 id="greeting">Hi!</h1>
