connection to salesforce implemented. having errors coming from sforce server using jsonp.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 }
                 console.log(res);
             });
+
+            conn.identity(function(err, res) {
+                debugger;
+            })
         });
     </script>
 </head>
